# QAZ

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  STM32F042C6Tx_FLASH.ld  UserConfig.mk.template
docs/guides/: Building.md  Programming.md  QAZ_65.md  QAZ_Media.md  Software.md
hardware/QAZ_65/layers/: plate_layer_v2.dxf  plate_layer_v3.dxf
hardware/QAZ_65/layers/plate_layer/: plate_layer.kicad_pcb
hardware/QAZ_65/layers/plate_layer_v3/: fp-512E.tmp  plate_layer_v3.kicad_pcb
hardware/QAZ_65/pcb/QAZ_65/: QAZ_65-cache.lib  QAZ_65.kicad_pcb  QAZ_65.kicad_pcb-bak  QAZ_65.net  QAZ_65.pro  QAZ_65.sch  QAZ_65.sch-bak  QAZ_65.xml  QAZ_65_1v0_BOM.xlsx  QAZ_65_1v1_BOM.xlsx  QAZ_65_RGB.sch  QAZ_65_externals.sch  QAZ_65_keys.sch  _autosave-QAZ_65.kicad_pcb  fp-info-cache
hardware/QAZ_media/layers/: plate_layer_v1.dxf
hardware/QAZ_media/layers/plate_layer_v1/: fp-lib-table  plate_layer_v1.kicad_pcb
hardware/QAZ_media/pcb/QAZ_media/: QAZ_media-cache.lib  QAZ_media.kicad_pcb  QAZ_media.pro  QAZ_media.sch  QAZ_media.xml  QAZ_media_1v0_BOM.xlsx  sym-lib-table
scripts/: Doxyfile  clint-excluded-files.txt  create-version.sh  verbose-bin-copy.sh
src/: CMakeLists.txt  clock.c  clock.h  debug.c  debug.h  hb.c  hb.h  i2c.c  i2c.h  key_matrix.c  key_matrix.h  lp500x_regs.h  macros.h  main.c  rgb_led.c  rgb_led.h  time_slice.c  time_slice.h  usb.c  usb.h  usb_descriptors.c  usb_descriptors.h  usb_hid.c  usb_hid.h  usb_hid_usages.h  version.hpp.in
src/CMSIS/Device/ST/STM32F0xx/Include/: stm32f0xx.h
src/bsp/: bsp.h  bsp.hpp  bsp_qaz_65.h  bsp_qaz_65.hpp  bsp_qaz_testboard.h  bsp_qaz_testboard.hpp  bsp_testboard.h
src/bsp/qaz_65/: bsp_qaz_65.cpp  bsp_qaz_65.hpp
src/bsp/qaz_media/: bsp_qaz_media.cpp  bsp_qaz_media.hpp
src/bsp/qaz_testboard/: bsp_qaz_testboard.cpp  bsp_qaz_testboard.hpp
src/comm/: comm_base.hpp  i2c.cpp  i2c.hpp  uart.cpp  uart.hpp
src/comms/: i2c.c  i2c.cpp  i2c.h  i2c.hpp  uart.c  uart.cpp  uart.h  uart.hpp
src/core/: clock.c  clock.cpp  clock.h  clock.hpp  gpio.hpp  main.c  main.cpp  startup_stm32f042.s  time_slice.c  time_slice.cpp  time_slice.h  time_slice.hpp
src/flash/: eeprom.c  eeprom.h  persist.cpp  persist.hpp  stm32f0xx_flash.c
src/is31fl3746a/: is31fl3746a.cpp  is31fl3746a.hpp  is31fl3746a_regs.hpp
src/keyboard/: key_matrix.cpp  key_matrix.hpp  lighting.cpp  lighting.hpp
src/lp500x/: lp500x.c  lp500x.cpp  lp500x.h  lp500x.hpp  lp500x_regs.h  lp500x_regs.hpp
src/media/: buttons.cpp  buttons.hpp  rotary_encoder.cpp  rotary_encoder.hpp
src/qaz/: buttons.cpp  buttons.hpp  key_matrix.c  key_matrix.cpp  key_matrix.h  key_matrix.hpp  lighting.c  lighting.cpp  lighting.h  lighting.hpp  lp500x_regs.h  main.c  main.cpp  persist.cpp  persist.hpp  rgb_led.c  rgb_led.h  rotary_encoder.cpp  rotary_encoder.hpp
src/usb/: consumer_hid.cpp  consumer_hid.hpp  consumer_usb_desc.cpp  consumer_usb_desc.hpp  kb_hid.cpp  kb_hid.hpp  kb_usb_desc.cpp  kb_usb_desc.hpp  usb.c  usb.cpp  usb.h  usb.hpp  usb_definitions.hpp  usb_descriptors.c  usb_descriptors.cpp  usb_descriptors.h  usb_descriptors.hpp  usb_hid.c  usb_hid.cpp  usb_hid.h  usb_hid.hpp  usb_hid_usages.h  usb_hid_usages.hpp
src/util/: bitop.hpp  debug.c  debug.cpp  debug.h  debug.hpp  expressions.hpp  hb.c  hb.cpp  hb.h  hb.hpp  macros.h  macros.hpp
(+135 files in other folders)
